--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 
 <body>
-    <input type="file" id="input" />
+    <input type="file" id="imgLoader" accept="image/x-png,image/gif,image/jpeg" />
     <div>
         <canvas width="400" height="300" id="canvas" />
     </div>
