--- a/index.html
+++ b/index.html
@@ -1,15 +1,49 @@
 <html>
 
 <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>PuzzleShuffle</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M"
+        crossorigin="anonymous">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <input type="file" id="imgLoader" accept="image/x-png,image/gif,image/jpeg" />
-    <div>
-        <canvas width="400" height="300" id="canvas" />
+    <div class="container">
+        <h1 class="text-center my-5 text-primary"><a href="https://github.com/stolarekpiotr/" class="fa fa-github" data-toggle="tooltip" data-placement="top" title="Przejdź do projektu na GitHubie">   PuzzleShuffle</a></h1>
+        <div class="d-flex justify-content-center mb-4">
+            <!-- <input class="mx-2 btn btn-outline-secondary" type="file" id="imgLoader" accept="image/x-png,image/gif,image/jpeg"/> -->
+            <span>
+                <input  type="file" 
+                        style="visibility:hidden; width: 1px;" 
+                        id='imgLoader' accept="image/x-png,image/gif,image/jpeg"
+                        onchange="$(this).parent().find('span').html($(this).val().replace('C:\\fakepath\\', ''))"  /> <!-- Chrome security returns 'C:\fakepath\'  -->
+                <input class="btn btn-info" type="button" value="Upload File.." onclick="$(this).parent().find('input[type=file]').click();"/> <!-- on button click fire the file click event -->
+                    &nbsp;
+                <span  class="badge badge-info"></span>
+            </span>
+            <button id="resetButton" type="button" class="btn btn-outline-secondary mx-2">RESET</button>
+        </div>
+
+        <canvas class="d-block mx-auto" width="700" height="500" id="canvas"></canvas>
+        <svg role="img" width="100" height="100" class="mx-auto d-block m-3" data-toggle="tooltip" data-placement="left" title="TRIANGLE">
+            <title>TRIANGLE</title>
+            <rect width="100" height="100" style="fill:black" />
+            <text x="50" y="50" text-anchor="middle" alignment-baseline="central" fill="white">C I R C L E</text>
+        </svg>
+        <p class="text-center font-italic">&copy; 2017 by <a class="text-secondary" href="https://stolarekpiotr.github.io/">Piotr Stolarek</a>
+            <p>
     </div>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4"
+        crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1"
+        crossorigin="anonymous"></script>
     <script src="script.js"></script>
 </body>
 
