--- a/index.html
+++ b/index.html
@@ -13,25 +13,35 @@
 <body>
     <div class="container">
         <h1 class="text-center my-5 text-primary"><a href="https://github.com/stolarekpiotr/" class="fa fa-github" data-toggle="tooltip" data-placement="top" title="Przejdź do projektu na GitHubie">   PuzzleShuffle</a></h1>
-        <div class="d-flex justify-content-center mb-2">
-            <!-- <input class="mx-2 btn btn-outline-secondary" type="file" id="imgLoader" accept="image/x-png,image/gif,image/jpeg"/> -->
-            <form>
-                <span>
-                
-                    <input  type="file" style="visibility:hidden; width: 1px;" id='imgLoader' accept="image/x-png,image/gif,image/jpeg" onchange="$(this).parent().find('span').html($(this).val().replace('C:\\fakepath\\', ''))"  />
-                    <input class="btn btn-info" type="button" value="Upload File.." onclick="$(this).parent().find('input[type=file]').click();"/>
-                    &nbsp;
-                
-                <span id="filename" class="badge badge-info"></span>
-                </span>
-            </form>
+        <div class="collapse" id="urlCollapse">
+            <div class="card card-body">
+
+                <div class="d-flex justify-content-center mb-2">
+                    <!-- <input class="mx-2 btn btn-outline-secondary" type="file" id="imgLoader" accept="image/x-png,image/gif,image/jpeg"/> -->
+                    <form>
+                        <span>
+                            <input  type="file" style="visibility:hidden; width: 1px;" id='imgLoader' accept="image/x-png,image/gif,image/jpeg" onchange="$(this).parent().find('span').html($(this).val().replace('C:\\fakepath\\', ''))"  />
+                            <input class="btn btn-info" type="button" value="Upload File..." onclick="$(this).parent().find('input[type=file]').click();"/>
+                            &nbsp;
+                            <span id="filename" class="badge badge-info"></span>
+                        </span>
+                    </form>
+                </div>
+                <span class="d-flex justify-content-center mb-3">OR</span>
+                <div class="input-group">
+                    <span class="input-group-addon bg-info text-light" id="imgUrlLabel">Image URL:</span>
+                    <input type="url" class="form-control" id="imgUrl" aria-describedby="ImgUrl">
+                </div>
+
+
+            </div>
         </div>
-        <span class="d-flex justify-content-center mb-2">OR</span>
-        <div class="input-group">
-            <span class="input-group-addon bg-info text-light" id="imgUrlLabel">Image URL:</span>
-            <input type="url" class="form-control" id="imgUrl" aria-describedby="ImgUrl">
+        <div class="d-flex justify-content-center my-2">
+            <a class="btn btn-primary mx-2" data-toggle="collapse" href="#urlCollapse" aria-expanded="false" aria-controls="urlCollapse">Load image</a>
+            <button id="resetButton" type="button" class="btn btn-outline-secondary mx-2">RESET</button>
+            <button id="showImage" type="button" class="btn btn-outline-secondary mx-2">SHOW IMAGE</button>
         </div>
-        <button id="resetButton" type="button" class="btn btn-outline-secondary d-block my-2 mx-auto">RESET</button>
+
 
         <canvas class="d-block mx-auto" width="700" height="500" id="canvas"></canvas>
         <svg role="img" width="100" height="100" class="mx-auto d-block m-3" data-toggle="tooltip" data-placement="left" title="TRIANGLE">
